--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "element-plus": "^2.10.6",
     "pinia": "^3.0.3",
     "vant": "^4.9.21",
     "vue": "^3.5.17",
