--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "element-plus": "^2.10.6",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "vant": "^4.9.21",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
